--- a/WE-A-ME/4-Categorias(Reparos)/reformas.css
+++ b/WE-A-ME/4-Categorias(Reparos)/reformas.css
@@ -149,6 +149,7 @@ h2{
 #imagem{
     border-radius: 30.6181px;
     width: 190px;
+    height: 162px;
     margin-left: 40px;
     margin-top: 40px;
 }
